# Lumina

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/lumina-api/: .dockerignore  go.mod  (+3 more)
apps/lumina-engine/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/lumina-engine/app/: __init__.py  config.py  errors.py  main.py  models.py
apps/lumina-engine/app/services/: chunking.py  embedding.py  matching.py  pdf_utils.py  qdrant_store.py
apps/lumina-engine/data/baseline/: README.md  manifest.json
apps/lumina-engine/data/baseline/cases/exact-copy/: case_exact_001.txt  case_exact_002.txt
apps/lumina-engine/data/baseline/cases/heavy-paraphrase/: case_heavy_001.txt  case_heavy_002.txt
apps/lumina-engine/data/baseline/cases/light-paraphrase/: case_light_001.txt  case_light_002.txt
apps/lumina-engine/data/baseline/cases/proper-citation/: case_citation_001.txt  case_citation_002.txt
apps/lumina-engine/data/baseline/cases/unrelated/: case_unrelated_001.txt  case_unrelated_002.txt
apps/lumina-engine/data/baseline/sources/: src_ai_essay.txt  src_cloud_security.txt  src_ml_ethics.txt  src_solar_energy.txt
apps/lumina-engine/scripts/: calibrate_threshold.py  export_openapi.py  seed_baseline_sources.py
apps/lumina-engine/tests/services/: test_chunking.py  test_embedding.py  test_matching.py
docs/: api-contract-v1.md  architecture.md  gateway-api-contract-v1.md  openapi-v1.json
scripts/: dev-down.ps1  dev-stack.ps1  dev-up.ps1  generate-contract-types.ps1  lint-all.ps1  test-all.ps1
(+40 files in other folders)
