[project]
name = "lumina-ai-processing"
version = "0.1.0"
description = "Lumina AI processing layer (Phase 1)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "pydantic-settings>=2.13.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
